Sat Mar 20 00:58:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* include/ruby/intern.h (rb_big_odd_p, rb_big_even_p): move to
	  internal.h so that they are exported only for ruby itself.

	* internal.h (rb_big_odd_p, rb_big_even_p): ditto.

Sat Mar 19 21:56:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/lib/test/unit.rb (Test::Unit::StatusLine#failed): defer
	  failed messages until the end in verbose mode, to get rid of
	  interleaving failures with progress messages.

Sat Mar 19 21:53:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (fix_cmp): invert the result as the comparison is
	  inverted.

Sat Mar 19 18:32:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (int_to_f): raise NotImplementedError when a receiver
	  class is unknown.

	* test/-ext-/integer/test_my_integer.rb (test_my_integer_to_f): modify
	  a test for the above change.

Sat Mar 19 18:21:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (Bignum#<=>): remove it because they are unified with
	  Integer#<=>.

	* numeric.c (Integer#<=>, Fixnum#<=>): move <=> method from Fixnum to
	  Integer.

	* numeric.c (int_cmp): add this method for Integer#<=>.

	* test/-ext-/integer/test_my_integer.rb (test_my_integer_cmp): add a
	  test to examine Integer#<=> for unknown subclasses.

Sat Mar 19 14:46:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (rb_iseq_compile_with_option): make the parser in mild
	  error.

	* load.c (rb_load_internal0): ditto.

	* parse.y (yycompile0): return the error message within the error
	  to be raised.  [Feature #11951]

	* parse.y (parser_compile_error): accumulate error messages in the
	  error_buffer.

Sat Mar 19 03:57:13 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (LOCALTIME): organize #ifdefs.

	* time.c (GMTIME): define only ifndef HAVE_STRUCT_TM_TM_GMTOFF.

Sat Mar 19 03:53:31 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (rb_cv_member_struct_tm_tm_gmtoff): For Linux (glibc)